k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/internal_network: "true"
        io.kompose.service: db
    spec:
      containers:
      - image: postgres:9.6-alpine
        imagePullPolicy: ""
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - postgres
        name: db
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: db-claim0
        persistentVolumeClaim:
          claimName: db-claim0
status: {}
