k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/internal_network: "true"
        io.kompose.service: redis
    spec:
      containers:
      - image: redis:5.0-alpine
        imagePullPolicy: ""
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
        name: redis
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: redis-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: redis-claim0
        persistentVolumeClaim:
          claimName: redis-claim0
status: {}
