k8s/sidekiq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: sidekiq
  name: sidekiq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sidekiq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/external_network: "true"
        io.kompose.network/internal_network: "true"
        io.kompose.service: sidekiq
    spec:
      containers:
      - args:
        - bundle
        - exec
        - sidekiq
        image: mountain/mastodon
        imagePullPolicy: ""
        name: sidekiq
        resources: {}
        volumeMounts:
        - mountPath: /mastodon/public/system
          name: sidekiq-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: sidekiq-claim0
        persistentVolumeClaim:
          claimName: sidekiq-claim0
status: {}
