k8s/streaming-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: streaming
  name: streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: streaming
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/external_network: "true"
        io.kompose.network/internal_network: "true"
        io.kompose.service: streaming
    spec:
      containers:
      - args:
        - node
        - ./streaming
        image: mountain/mastodon
        imagePullPolicy: ""
        livenessProbe:
          exec:
            command:
            - wget -q --spider --proxy=off localhost:4000/api/v1/streaming/health
              || exit 1
        name: streaming
        ports:
        - containerPort: 4000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
