k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/external_network: "true"
        io.kompose.network/internal_network: "true"
        io.kompose.service: web
    spec:
      containers:
      - args:
        - bash
        - -c
        - rm -f /mastodon/tmp/pids/server.pid; bundle exec rails s -p 3000
        image: mountain/mastodon
        imagePullPolicy: ""
        livenessProbe:
          exec:
            command:
            - wget -q --spider --proxy=off localhost:3000/health || exit 1
        name: web
        ports:
        - containerPort: 3000
        resources: {}
        volumeMounts:
        - mountPath: /mastodon/public/system
          name: web-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: web-claim0
        persistentVolumeClaim:
          claimName: web-claim0
status: {}
