k8s/internal_network-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: internal_network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/internal_network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/internal_network: "true"
